kustomize/observatorium/llc-dev-env/resources/receive-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: thanos-receive
spec:
  rules:
  - host: remote-write.dev.observatorium.io
    http:
      paths:
      - backend:
          serviceName: thanos-receive
          servicePort: 80
        path: /
  tls:
  - hosts:
    - remote-write.dev.observatorium.io
    secretName: rw-dev-observatorium-io
